<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>MyFirstWebProject</groupId>
	<artifactId>MyFirstWebProject</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>
	<build>
		<finalName>my-first-web-project</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<path>/${project.build.finalName}</path>
					<contextReloadable>true</contextReloadable>
					<systemProperties>
						<!-- <JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xdebug -Xnoagent 
							-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS> 
							<MAVEN_OPTS>="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"</MAVEN_OPTS> -->
						<JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC
							-Dcom.sun.management.jmxremote -XX:PermSize=256m
							-XX:MaxPermSize=512m</JAVA_OPTS>
						<MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE
							-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS>
						export MAVEN_OPTS
					</systemProperties>

				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<forkMode>never</forkMode>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>

		</dependency>

	</dependencies>


</project>